--- a/_includes/components/faq_accordion.html
+++ b/_includes/components/faq_accordion.html
@@ -6,7 +6,7 @@
             {{ item.title }}
             <!-- {%- include tools/icons.html icon="logo-alt-gray" -%} -->
         </a>
-        <div class="uk-accordion-content">{{ item.description }}</div>
+        <div class="uk-accordion-content">{{ item.content }}</div>
     </li>
     {% endfor %}
 </ul>
