--- a/_includes/home/features.html
+++ b/_includes/home/features.html
@@ -3,8 +3,8 @@
         <div class="features-img show-largeup">
             <img src="{{ site.url }}/uploads/features.svg" alt="">
         </div>
-        <div class="features-content wrapper will-grow negate-bottom">
-            <h3 class="section-title pb-2">With Eyowo you can...</h3>
+        <div class="features-content wrapper will-grow">
+            <h2 class="section-title pb-2">With Eyowo you can...</h2>
        
             <ul class="m-0 none features">
                 {% for entry in site.data.options.features %}
