--- a/_includes/home/header.html
+++ b/_includes/home/header.html
@@ -6,7 +6,7 @@
         <img src="{{ site.url }}/uploads/header-bg.svg" alt="" class="absolute-zero height-100-pc">
     </div>
 
-    <div class="mx-auto wrapper-x header-content-wrapper">
+    <div class="mx-auto wrapper will-grow negate-top header-content-wrapper">
         <div class="header-content">
             <h2 class="co-rich-black headline m-0">Make Payments. <span class="d-blk">However. Whenever.</span></h2>
             <p class="nanotext lh-1-3h pt-1 m-0">Send, receive, spend money and pay bills with just your phone number. Carry out all your transactions with or without a bank account. </p>
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <a href="#features" class="flx-show-largeup flx-dir-c al-i-c p-1 z-depth-2 absolute-bottom">
+    <a href="#features" class="flx-show-largeup flx-dir-c al-i-c p-1 z-depth-2 absolute-bottom link-to-next" uk-scroll>
         {%- include tools/icons.html icon="link-to-next-section" -%}
     </a>
 </section>
