--- a/_includes/shell/logobar.html
+++ b/_includes/shell/logobar.html
@@ -10,7 +10,7 @@
             <div class="d-flx al-i-c">
                 <a href="https://app.eyowo.com" class="d-blk bg-primary d-flx al-i-c py-h px-1h border-radius-50">
                     {%- include tools/icons.html icon="logo-alt-white" -%}
-                    <span class="fw-medium co-white suffix primary-caps">My Eyowo</span>
+                    <span class="fw-bold co-white suffix primary-caps">My Eyowo</span>
                 </a>
                 <button class="hide-largeup pos-rel toggle-mobile-nav suffix is-wider" aria-label="Toggle Navigation" nav-toggler>
                     <span class="slats absolute-middle"></span>
