--- a/_layouts/legal.html
+++ b/_layouts/legal.html
@@ -3,7 +3,10 @@ layout: base
 ---
 
 <section class="wrapper will-grow maxwidth-tb mx-auto">
-    <article class="bg-white p-2 preferred-radius is-raised">
-        {{ content }}
+    <h2 class="sr">Legal Policies</h2>
+    <article class="bg-white preferred-radius is-raised wrapper will-grow">
+        <div class="maxwidth-sm mx-auto">
+            {{ content }}
+        </div>
     </article>
 </section>
