--- a/_sass/layouts/footer.sass
+++ b/_sass/layouts/footer.sass
@@ -4,20 +4,20 @@
     // @package eyw-merchant
     // @author  Jessica Eze <jessica@softcom.ng>
 .footer-content
-    @media #{ $smallup}
+    @media #{ $mediumup}
         display: flex
         align-items: center
 .footer-branding 
     display: flex
     align-items: center
     padding: 1.5rem 0 .75rem
-    @media #{ $smallup}
+    @media #{ $mediumup}
         padding: 0
     .copyright
         padding-right: 1.5rem
 .social-links
     padding-right: 1.5rem
     margin: .75rem 0 2rem
-    @media #{ $smallup}
+    @media #{ $mediumup}
         padding: 2rem 1rem
         margin: 0
