--- a/_sass/modules/buttons.sass
+++ b/_sass/modules/buttons.sass
@@ -65,3 +65,47 @@
         position: relative
         right: 0
         top: 53%
+
+.link-to-next
+    animation-name: shake
+    animation-duration: 5s
+    animation-iteration-count: infinite
+    animation-timing-function: ease-in
+    &:hover
+        animation-name: shakeAnim
+
+@keyframes shake 
+    0%
+        left: 0
+    1%
+        left: -3px
+    2%
+        left: 5px
+    3%
+        left: -8px
+    4%
+        left: 8px
+    5%
+        left: -5px
+    6%
+        left: 3px
+    7%
+        left: 0
+
+@keyframes shakeAnim 
+    0% 
+        left: 0
+    1% 
+        left: -3px
+    2% 
+        left: 5px
+    3% 
+        left: -8px
+    4% 
+        left: 8px
+    5% 
+        left: -5px
+    6% 
+        left: 3px
+    7% 
+        left: 0
