--- a/_includes/home/why.html
+++ b/_includes/home/why.html
@@ -1,18 +1,23 @@
-<!-- <section class="pos-rel why-section d-flx flx-dir-c j-c-center">
+<section class="pos-rel why-section d-flx flx-dir-c j-c-center">
     <img src="{{ site.url }}/uploads/why-section-bg.svg" alt="" class="absolute-zero height-100-pc">
 
-    <div class="maxwidth-xl wrapper-x mx-auto grid">
-        <div class="col-12 col-4-md why-content pos-rel z-depth-2">
+    <div class="maxwidth-xl wrapper-x mx-auto why-content grid wrapper will-grow">
+        <div class="col-12 col-4-lg why-content pos-rel z-depth-2">
             <h3 class="section-title small">Why Eyowo</h3>
             <p>Our ultimate aim is financial inclusion for millions of Nigerians who have phone numbers but no bank accounts. For those with bank accounts, we aim to simplify payments.</p>
         </div>
 
-        <div class="col-12 col-8-md offset-4-cols-from-left none m-0 why-slider show-largeup">
-            <ul class="none m-0 why-slider-grid z-depth-2 absolute-middle-right">
-                {%- for item in site.whyeyowo limit: 3 -%}
-                <li class="why-slide"><img src="{{ item.testimony_image | prepend: site.url }}" alt=""></li>
+        <!-- Slider main container -->
+        <div class="col-12 col-4-lg offset-4-cols-from-left width-100-pc why-slider" uk-slider="autoplay: true">
+            <ul class="uk-slider-items none m-0">
+                {%- for item in site.whyeyowo -%}
+                <li class="">
+                    <img src="{{ item.testimony_image | prepend: site.url }}" alt="">
+                </li>
                 {%- endfor -%}
             </ul>
+
+            <ul class="uk-slider-nav uk-dotnav pos-rel z-depth-2"></ul>
         </div>
     </div>
-</section> -->
+</section>
