--- a/_includes/shell/foot.html
+++ b/_includes/shell/foot.html
@@ -1,5 +1,4 @@
-<script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.19/js/uikit.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.19/js/uikit-icons.min.js"></script>
+<script id="dsq-count-scr" src="//eyowo-com-1.disqus.com/count.js" async></script>
 <script src="{{ site.url }}/js/main.js"></script>
