--- a/_includes/shell/footer.html
+++ b/_includes/shell/footer.html
@@ -7,7 +7,7 @@
         <ul class="m-0 none d-flx al-i-c">
             {%- for entry in site.data.options.social_media -%}
                 <li>
-                    <a href="{{ entry.slug }}" class="d-blk social-links">
+                    <a href="{{ entry.slug }}" class="d-blk social-links" target="_blank">
                         {%- if entry.name == 'facebook' -%}
                         {%- include tools/icons.html icon="facebook" -%}
                         {%- elsif entry.name == 'twitter' -%}
