--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="{{ site.language }}">
     {% include shell/head.html %}
     <body id="under-nav-body" {%- if page.layout == 'home' -%}
