--- a/_layouts/faqs.html
+++ b/_layouts/faqs.html
@@ -2,6 +2,6 @@
 layout: base
 ---
 
-<section class="wrapper will-grow maxwidth-tb mx-auto">
+<div class="wrapper will-grow negate-bottom maxwidth-tb mx-auto">
     {%- include components/faq_accordion.html -%}
-</section>
+</div>
