--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -14,7 +14,7 @@ $mediumfont:        1.275rem
 $largefont:         1.475rem
 
 $defaultlh:         1.6725
-$headinglh:         1.3925
+$headinglh:         1.2925
 $headingls:         1.12px
 
 $bodyfont:          'Source Sans Pro', sans-serif
@@ -25,9 +25,9 @@ $normal:            400
 
 // Colors
 $primarycolor:      #C4702E
-$sweetgray:         #d7d7d7
-$richblack:         #080705
-$readablegray:      #626262
+$sweetgray:         #767676
+$richblack:         #17171a
+$readablegray:      rgba(0,0,0,0.7)
 $platinum:          #d2d2d2
 $primarybg:         #FFFDFA
 $primarygray:       #868686
@@ -35,7 +35,7 @@ $primarygray:       #868686
 // Media
 $buttonshadow:      8px 10px 20px 0px rgba( 46, 61, 73, 0.15 )
 $subtleboxshadow:   0 2px 4px 0 rgba(50,50,93,0.1)
-$brashboxshadow:    5px 5px 25px 0 rgba( 46, 61, 73, 0.2 )
+$brashboxshadow:    7px 6px 23px -8px rgba(0,0,0,0.75)
 $borderline:        1px solid #EBEBF2
 
 $preferredradius:   3px
@@ -49,7 +49,7 @@ $maxwidth-lg:           1192px
 $maxwidth-lt:           992px
 $maxwidth-tb:           768px
 $maxwidth-md:           656px
-$maxwidth-sm:           544px
+$maxwidth-sm:           576px
 $maxwidth-xs:           360px
 
 $space-xxs:             0.32rem
@@ -63,7 +63,8 @@ $space:                 1.24rem
 // Media Queries
 $xsmallup:              "only screen and (min-width: 368px)"
 $smallup:               "only screen and (min-width: 544px)"
-$mediumup:              "only screen and (min-width: 672px)"
-$mediumdown:            "only screen and (max-width: 671px)"
+$smalldown:             "only screen and (max-width: 543px)"
+$mediumup:              "only screen and (min-width: 640px)"
+$mediumdown:            "only screen and (max-width: 639px)"
 $largeup:               "only screen and (min-width: 992px)"
 $xlargeup:              "only screen and (min-width: 1280px)"
