--- a/_sass/layouts/grid.sass
+++ b/_sass/layouts/grid.sass
@@ -28,6 +28,8 @@
     height:             100%
 .height-100-vh
     height:             100%
+.min-height-200
+    min-height:         200px
 
 
 // The Grid
@@ -35,6 +37,8 @@
     display:                     grid
     grid-template-columns:       repeat(12, 1fr)
     grid-gap:                    $space-sm
+    &.more-space
+        grid-gap:                $space-lg
     &.header-grid
         @media #{ $largeup }
             grid-template-columns:       1fr 2fr
@@ -94,6 +98,28 @@
             &.offset-7-cols-from-left
                 grid-column:    8 / 13
         .col-8-md
+            grid-column:        1 / 9
+            &.offset-8-cols-from-left
+                grid-column:    9 / 13
+    
+    @media #{ $largeup }
+        .col-4-lg
+            grid-column:        1 / 5
+            &.offset-4-cols-from-left
+                grid-column:    5 / 13
+        .col-5-lg
+            grid-column:        1 / 6
+            &.offset-5-cols-from-left
+                grid-column:    6 / 13
+        .col-6-lg
+            grid-column:        1 / 7
+            &.offset-6-cols-from-left
+                grid-column:    7 / 13
+        .col-7-lg
+            grid-column:        1 / 8
+            &.offset-7-cols-from-left
+                grid-column:    8 / 13
+        .col-8-lg
             grid-column:        1 / 9
             &.offset-8-cols-from-left
                 grid-column:    9 / 13
