--- a/_sass/layouts/header.sass
+++ b/_sass/layouts/header.sass
@@ -15,6 +15,7 @@
             width: 40%
             max-width: 200px
 .header-content-wrapper
+    height: 100%  
     max-width: $maxwidth-tb
     @media #{ $largeup}
         max-width: $maxwidth-xl
@@ -30,11 +31,11 @@
     position: relative
     z-index: 2
     @media #{ $largeup}
-        padding-top: 6rem
+        padding-top: 10rem
         justify-content: center
-        height: 100%   
         padding-bottom: 0
         width: 50%
+        height: 100%  
         text-align: left
         align-items: unset
         max-width: $maxwidth-xl
@@ -55,7 +56,7 @@
     position: absolute
     z-index: 17
     width: 120px
-    bottom: -40
+    bottom: -40px
     left: 190px
     object-fit: contain
 .iphoneview
