--- a/_sass/modules/images.sass
+++ b/_sass/modules/images.sass
@@ -11,14 +11,33 @@ svg
 
 .obj-fit-cover
     object-fit:             cover
+
+.thumbnail
+    &.is-nano
+        width:              25px
+        height:             25px
+    &.is-micro
+        width:              40px
+        height:             40px
+    &.is-small
+        width:              72px
+        height:             72px
+    &.is-medium
+        width:              104px
+        height:             104px
+    &.is-large
+        width:              128px
+        height:             128px
+
+        
 .avatar
     border-radius:          50%
     &.is-nano
         width:              25px
         height:             25px
     &.is-micro
-        width:              50px
-        height:             50px
+        width:              40px
+        height:             40px
     &.is-small
         width:              72px
         height:             72px
