--- a/_sass/modules/texts.sass
+++ b/_sass/modules/texts.sass
@@ -66,15 +66,16 @@
 .mediumtext
     font-size:          $mediumfont
 .largetext
-    font-size:          2.2rem
-
+    font-size:          1.8rem
+    @media #{ $mediumup}
+        font-size:          2.2rem
 // Headings
-h1, h2, h3, h4, .h1, .h2, .h3, .h4
+h1, h2, h3, h4, .h1, .h2, .h3, .h4, .h5
     margin-top:         $space-sm
-    margin-bottom:      $space-xs
+    margin-bottom:      $space-xxs
+    font-family:        $headingfont
     font-weight:        $bold
     line-height:        $headinglh
-    font-family:        $headingfont
 h1, .h1
     font-size:          1.75rem
     @media #{ $smallup }
@@ -84,8 +85,13 @@ h2, .h2
     @media #{ $smallup }
         font-size:      1.85rem
 h3, .h3
-    font-size:          1.42rem
+    font-size:          1.32rem
 h4, .h4
+    font-size:          1.10rem
+    margin: 0 0 10px
+h5, .h5
+    margin: 0 0 10px
+    font-weight: bold
     font-size:          1.00rem
 
 // Fonts
