Added faint gray

--- a/_layouts/business.html
+++ b/_layouts/business.html
@@ -126,7 +126,7 @@ layout: base
                         <h2 class="maxwidth-xs co-rich-black largetext m-0 mb-h">Experience Eyowo for business now</h2>
                         <p class="m-0">To better organize your business, download the Eyowo Business app right away. (Available on Android and iOS).</p>
                         <!-- {% include components/get-app.html %} -->
-                        <p class="co-sweet-gray mt-1">Coming soon to the App stores</p>
+                        <p class="co-faint-gray mt-1">Coming soon to the App stores</p>
                     </div>
                     <img src="{{ site.url }}/uploads/business/business-app.png" alt="A hand holding the eyowo app" class="show-largeup banner-image is-business">
                 </div>
@@ -210,7 +210,7 @@ layout: base
                                 <h2 class="maxwidth-xs co-rich-black largetext">Experience Eyowo as a business now</h2>
                                 <p class="m-0">To start earning, download the Eyowo Kiosk app (Available on Android and iOS) or dial <span class="co-primary fw-bold">*4255*20#</span></p>
                                 <!-- {% include components/get-app.html %} -->
-                                <p class="co-sweet-gray mt-1">Coming soon to the App stores</p>
+                                <p class="co-faint-gray mt-1">Coming soon to the App stores</p>
                             </div>
                             <img src="{{ site.url }}/uploads/business/kiosk-app.svg" alt="A hand holding the eyowo app" class="show-largeup banner-image is-business"> 
                         </div>
