--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -25,7 +25,8 @@ $normal:            400
 
 // Colors
 $primarycolor:      #C4702E
-$sweetgray:         #767676
+$sweetgray:         #d7d7d7
+$faintgray:         #767676
 $richblack:         #17171a
 $readablegray:      rgba(0,0,0,0.7)
 $platinum:          #d2d2d2
