--- a/_sass/modules/colors.sass
+++ b/_sass/modules/colors.sass
@@ -9,6 +9,8 @@
     color:              $readablegray
 .co-sweet-gray
     color:              $sweetgray
+.co-faint-gray
+    color:              $faintgray
 .co-rich-black
     color:              $richblack
 .co-white
