responsive fix on large screens

--- a/_includes/components/get-app.html
+++ b/_includes/components/get-app.html
@@ -1,11 +1,11 @@
 <ul class="none m-0 d-flx al-i-c get-app-cta pt-1h pos-rel z-depth-2 ">
     <li class="prefix">
-        <a href="https://play.google.com/store/apps/details?id=com.eyowo.android" class="google-play d-blk">
+        <a href="https://play.google.com/store/apps/details?id=com.eyowo.android" class="google-play d-blk" target="_blank">
             {%- include tools/icons.html icon="google-play" -%}
         </a>
     </li>
     <li class="suffix">
-        <a href="https://itunes.apple.com/ng/app/eyowo/id1353757720?mt=8" class="app-store">
+        <a href="https://itunes.apple.com/ng/app/eyowo/id1353757720?mt=8" class="app-store d-blk" target="_blank">
             {%- include tools/icons.html icon="app-store" -%}
         </a>
     </li>
