--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -58,7 +58,10 @@ img
 figure
     max-width:              $maxwidth-tb
     width:                  100%
-    
+
+em
+    color:                  $readablegray
+   
 ul.none, ol.none
     padding-left:           0
     list-style:             none
