--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -44,7 +44,7 @@ $desiredduration:   0.24s
 
 
 // Measures
-$maxwidth-xxl:          1440px
+$maxwidth-xxl:          1680px
 $maxwidth-xl:           1280px
 $maxwidth-lg:           1192px
 $maxwidth-lt:           992px
@@ -69,3 +69,4 @@ $mediumup:              "only screen and (min-width: 640px)"
 $mediumdown:            "only screen and (max-width: 639px)"
 $largeup:               "only screen and (min-width: 992px)"
 $xlargeup:              "only screen and (min-width: 1280px)"
+$xxlargeup:             "only screen and (min-width: 1680px)"
