--- a/_includes/shell/head.html
+++ b/_includes/shell/head.html
@@ -1,5 +1,5 @@
 <head>
-    <title>{{ page.title }} - {{ site.title }}</title>
+    <title>{{ site.title }}</title>
     <meta charset="{{ site.charset }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="180x180" href="{{ site.url }}/uploads/favicons/apple-touch-icon.png">
