Changed page h1's to page.title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     {%- endif -%}>
         <a class="skip-link sr" href="#main"></a>
         <h1 class="sr">
-            {{ site.title }}
+            {{ page.title }}
         </h1>
         {%- include shell/nav/mainnav.html -%}
         {%- include shell/logobar.html -%}
