--- a/_includes/shell/foot.html
+++ b/_includes/shell/foot.html
@@ -1,4 +1,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.19/js/uikit.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.19/js/uikit-icons.min.js"></script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5b850f7549f2937e"></script>
 <script id="dsq-count-scr" src="//eyowo-com-1.disqus.com/count.js" async></script>
 <script src="{{ site.url }}/js/main.js"></script>
