--- a/_includes/read_time.html
+++ b/_includes/read_time.html
@@ -1,7 +1,5 @@
-{% assign read_time = words | divided_by:224 | round %}
-
-{% if read_time <= 1 %}
-    {{ read_time | append: ' min' }}
+{% if words < 360 %}
+  1 min
 {% else %}
-    {{ read_time | append: ' mins' }}
+  {{ words | divided_by:180 }} mins
 {% endif %}
